[tool.poetry]
name = "simclient"
version = "0.1.0"
description = ""
authors = ["@2XXEformyshirt"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
